# monte-carlo-simulation-using-black-scholes-for-stock-price-in-python

./: .gitignore  8 - Monte Carlo Simulation for option pricing.ipynb  8 - Monte Carlo Simulation for option pricing.py  README.md  article.md  benchmark_rust.py  config.local.yaml.example  config.yaml  pyproject.toml
.github/workflows/: ci.yml
data/: README.md  aoil.csv
notebooks/: monte_carlo_option_pricing.ipynb
rust/bench/: Cargo.toml
rust/bench/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/py/: Cargo.toml
rust/py/src/: lib.rs
scripts/: fetch_prices.py
src/: compute_kernel.py
src/monte_carlo_bs/: __init__.py  config.py  data.py  paths.py  plots.py  runner.py  simulation.py
tests/: test_integration.py  test_simulation.py
