[project]
name = "monte-carlo-bs"
version = "0.2.0"
description = "Monte Carlo stock price simulation using geometric Brownian motion"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pyyaml>=6.0",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
fetch = ["yfinance>=0.2"]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
monte-carlo-run = "monte_carlo_bs.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monte_carlo_bs"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

# Optional Rust extension — build with:
#   pip install maturin && maturin develop --release -m rust/py/Cargo.toml
[tool.maturin]
manifest-path = "rust/py/Cargo.toml"
module-name = "monte_carlo_simulation_using_black_scholes_for_stock_price_in_python_rs"

